Fix: ajuste em url

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <section class="home" id="home"> <!--Inicio Home-->
                 <figure class="img-home"> <!--Inicio Imagem Principal-->
-                    <img src="/assets/perfilsemfundo.png" alt="Foto de Alisson Souza">
+                    <img src="./assets/perfilsemfundo.png" alt="Foto de Alisson Souza">
                 </figure> <!--Fim Imagem Principal-->
 
                 <section class="main-home"> <!--Inicio Principal Home-->
