--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div> <!--Fim Titulo da Sobre-->
                     <div class="conteudo-sobre"> <!--Inicio Conteudo Sobre-->
                         <figure class="avatar-sobre"> <!-- Inicio Imagem Avatar-->
-                            <img src="/assets/avatarsobre.png" alt="Avatar Alisson">
+                            <img src="./assets/avatarsobre.png" alt="Avatar Alisson">
                         </figure> <!-- Fim Imagem Avatar-->
                         <div class="text-sobre"> <!--Inicio Apresentação-->
                             <div class="text"><span class="typing-2"></span></div>
@@ -89,7 +89,7 @@
                             </p>
                             <div class="sobre-botoes"> <!--Inicio Botões Sobre-->
                                 <div class="botao-curriculo"> <!--Currículo-->
-                                    <a href="/assets/Currículo profissional Alisson Souza.pdf">
+                                    <a href="./assets/Currículo profissional Alisson Souza.pdf">
                                         <div class="sobre-curriculo">
                                             <ion-icon name="cloud-download-outline"></ion-icon>
                                         </div>
@@ -119,7 +119,7 @@
                     <div class="conteudo-formacao">
                         <div class="card-formacao">
                             <div class="card-formacao-logo">
-                                <img src="/assets/logo-uninter.png" alt="Logo da Universidade no card">
+                                <img src="./assets/logo-uninter.png" alt="Logo da Universidade no card">
                             </div>
                             <p class="curso"> Análise e Desenvolvimento de Sistemas</p>
                             <p class="universidade"> Universidade Internacional - UNINTER</p>
@@ -141,7 +141,7 @@
                                 <a href="https://github.com/alissondevsouza/To-Do-List-Agular">
                                     <div class="projeto">
                                         <figure class="img-slide">
-                                            <img src="/assets/angular.png" alt="">
+                                            <img src="./assets/angular.png" alt="">
                                         </figure>
                                         <div class="text-slide">
                                             <h1>To-Do-List</h1>
@@ -154,7 +154,7 @@
                                 <a href="https://github.com/alissondevsouza/user-registration-backend">
                                     <div class="projeto">
                                         <figure class="img-slide">
-                                            <img src="/assets/java-spring.png" alt="">
+                                            <img src="./assets/java-spring.png" alt="">
                                         </figure>
                                         <div class="text-slide">
                                             <h1>API de Usuários</h1>
@@ -167,7 +167,7 @@
                                 <a href="https://github.com/alissondevsouza/nestjs-prisma-mongodb">
                                     <div class="projeto">
                                         <figure class="img-slide">
-                                            <img src="/assets/nestjs-mongodb.png" alt="">
+                                            <img src="./assets/nestjs-mongodb.png" alt="">
                                         </figure>
                                         <div class="text-slide">
                                             <h1>API Estoque</h1>
@@ -180,7 +180,7 @@
                                 <a href="https://github.com/alissondevsouza/desafio-go">
                                     <div class="projeto">
                                         <figure class="img-slide">
-                                            <img src="/assets/docker-go.png" alt="">
+                                            <img src="./assets/docker-go.png" alt="">
                                         </figure>
                                         <div class="text-slide">
                                             <h1>Imagem Docker de Aplicação</h1>
